fixed light mode/dark mode twitter!

--- a/ClientApp/src/components/News/News.scss
+++ b/ClientApp/src/components/News/News.scss
@@ -10,6 +10,5 @@
 
 .dark-theme {
     .timeline-Widget{
-        theme: "dark";
     }
 }
